k8s/namespace-configmap-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dcloudx
  labels:
    name: dcloudx
